tests/ui/modules/super-at-crate-root.stderr
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> $DIR/super-at-crate-root.rs:4:5
   |
LL | use super::f;
   |     ^^^^^ there are too many leading `super` keywords

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
